--- a/docs/source/fables/公鸡.md
+++ b/docs/source/fables/公鸡.md
@@ -13,7 +13,7 @@
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio54_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio54_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -30,7 +30,7 @@ Some Thieves broke into a house, and found nothing worth taking except a Cock, w
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio54.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio54.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -51,7 +51,7 @@ Some Thieves broke into a house, and found nothing worth taking except a Cock, w
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio142_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio142_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -68,7 +68,7 @@ There were two Cocks in the same farmyard, and they fought to decide who should 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio142.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio142.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -89,7 +89,7 @@ There were two Cocks in the same farmyard, and they fought to decide who should 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio149_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio149_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -106,7 +106,7 @@ A Cock, scratching the ground for something to eat, turned up a Jewel that had b
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio149.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio149.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -127,7 +127,7 @@ A Cock, scratching the ground for something to eat, turned up a Jewel that had b
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio244_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio244_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -144,7 +144,7 @@ One day, as a Fowler was sitting down to a scanty supper of herbs and bread, a f
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio244.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio244.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
