--- a/docs/source/fables/山羊.md
+++ b/docs/source/fables/山羊.md
@@ -13,7 +13,7 @@
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio61_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio61_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -30,7 +30,7 @@ Jupiter granted beards to the She-Goats at their own request, much to the disgus
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio61.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio61.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -51,7 +51,7 @@ Jupiter granted beards to the She-Goats at their own request, much to the disgus
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio122_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio122_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -68,7 +68,7 @@ A Goat was straying in a vineyard, and began to browse on the tender shoots of a
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio122.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio122.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -89,7 +89,7 @@ A Goat was straying in a vineyard, and began to browse on the tender shoots of a
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio207_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio207_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -106,7 +106,7 @@ A Goatherd was one day gathering his flock to return to the fold, when one of hi
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio207.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio207.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -127,7 +127,7 @@ A Goatherd was one day gathering his flock to return to the fold, when one of hi
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio276_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio276_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -144,7 +144,7 @@ A Goatherd was tending his goats out at pasture when he saw a number of Wild Goa
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio276.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio276.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -165,7 +165,7 @@ A Goatherd was tending his goats out at pasture when he saw a number of Wild Goa
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio313_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio313_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -182,7 +182,7 @@ Two Goats, frisking gayly on the rocky steeps of a mountain valley, chanced to m
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio313.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio313.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -203,7 +203,7 @@ Two Goats, frisking gayly on the rocky steeps of a mountain valley, chanced to m
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio363_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio363_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -220,7 +220,7 @@ One cold stormy day a Goatherd drove his Goats for shelter into a cave, where a 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio363.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio363.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -241,7 +241,7 @@ One cold stormy day a Goatherd drove his Goats for shelter into a cave, where a 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio374_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio374_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -258,7 +258,7 @@ A Bull once escaped from a Lion by entering a cave which the Goatherds used to h
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio374.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio374.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -279,7 +279,7 @@ A Bull once escaped from a Lion by entering a cave which the Goatherds used to h
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio381_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio381_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -296,7 +296,7 @@ A Goat strayed away from the flock, tempted by a patch of clover. The Goatherd t
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio381.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio381.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
