--- a/docs/source/fables/狗.md
+++ b/docs/source/fables/狗.md
@@ -13,7 +13,7 @@
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio3_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio3_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -30,7 +30,7 @@ There was once a Dog who used to snap at people and bite them without any provoc
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio3.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio3.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -51,7 +51,7 @@ There was once a Dog who used to snap at people and bite them without any provoc
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio7_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio7_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -68,7 +68,7 @@ A Dog and a Sow were arguing and each claimed that its own young ones were finer
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio7.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio7.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -89,7 +89,7 @@ A Dog and a Sow were arguing and each claimed that its own young ones were finer
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio31_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio31_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -106,7 +106,7 @@ There was once a man who had an Ass and a Lap-dog. The Ass was housed in the sta
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio31.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio31.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -127,7 +127,7 @@ There was once a man who had an Ass and a Lap-dog. The Ass was housed in the sta
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio52_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio52_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -144,7 +144,7 @@ A rich man once invited a number of his friends and acquaintances to a banquet. 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio52.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio52.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -165,7 +165,7 @@ A rich man once invited a number of his friends and acquaintances to a banquet. 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio71_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio71_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -182,7 +182,7 @@ A Dog was lying in a Manger on the hay which had been put there for the cattle, 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio71.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio71.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -203,7 +203,7 @@ A Dog was lying in a Manger on the hay which had been put there for the cattle, 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio84_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio84_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -220,7 +220,7 @@ A Traveller was about to start on a journey, and said to his Dog, who was stretc
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio84.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio84.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -241,7 +241,7 @@ A Traveller was about to start on a journey, and said to his Dog, who was stretc
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio91_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio91_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -258,7 +258,7 @@ A Blacksmith had a little Dog, which used to sleep when his master was at work, 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio91.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio91.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -279,7 +279,7 @@ A Blacksmith had a little Dog, which used to sleep when his master was at work, 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio93_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio93_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -296,7 +296,7 @@ A Dog was crossing a plank bridge over a stream with a piece of meat in his mout
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio93.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio93.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -317,7 +317,7 @@ A Dog was crossing a plank bridge over a stream with a piece of meat in his mout
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio124_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio124_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -334,7 +334,7 @@ A Hound who had served his master well for years, and had run down many a quarry
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio124.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio124.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -355,7 +355,7 @@ A Hound who had served his master well for years, and had run down many a quarry
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio129_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio129_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -372,7 +372,7 @@ A young Hound started a Hare, and, when he caught her up, would at one moment sn
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio129.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio129.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -393,7 +393,7 @@ A young Hound started a Hare, and, when he caught her up, would at one moment sn
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio138_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio138_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -410,7 +410,7 @@ A Hound started a Hare from her form, and pursued her for some distance; but as 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio138.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio138.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -431,7 +431,7 @@ A Hound started a Hare from her form, and pursued her for some distance; but as 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio204_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio204_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -449,7 +449,7 @@ The Dog was a good deal bored with listening to all this, till at last his impat
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio204.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio204.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -470,7 +470,7 @@ The Dog was a good deal bored with listening to all this, till at last his impat
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio208_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio208_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -487,7 +487,7 @@ Once upon a time the Sheep complained to the shepherd about the difference in hi
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio208.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio208.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -508,7 +508,7 @@ Once upon a time the Sheep complained to the shepherd about the difference in hi
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio212_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio212_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -525,7 +525,7 @@ A Gardner's Dog fell into a deep well, from which his master used to draw water 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio212.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio212.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -546,7 +546,7 @@ A Gardner's Dog fell into a deep well, from which his master used to draw water 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio231_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio231_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -563,7 +563,7 @@ One winter's day, during a severe storm, a Horse, an Ox, and a Dog came and begg
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio231.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio231.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -584,7 +584,7 @@ One winter's day, during a severe storm, a Horse, an Ox, and a Dog came and begg
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio242_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio242_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -601,7 +601,7 @@ Once upon a time a number of Dogs, who were famished with hunger, saw some Hides
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio242.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio242.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -622,7 +622,7 @@ Once upon a time a number of Dogs, who were famished with hunger, saw some Hides
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio246_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio246_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -639,7 +639,7 @@ A Farmer was snowed up in his farmstead by a severe storm, and was unable to go 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio246.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio246.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -660,7 +660,7 @@ A Farmer was snowed up in his farmstead by a severe storm, and was unable to go 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio335_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio335_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -677,7 +677,7 @@ A Dog had learned to carry his master's dinner to him every day. He was very fai
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio335.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio335.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -698,7 +698,7 @@ A Dog had learned to carry his master's dinner to him every day. He was very fai
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio341_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio341_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -715,7 +715,7 @@ Some hungry Dogs saw a number of hides at the bottom of a stream where the Tanne
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio341.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio341.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -736,7 +736,7 @@ Some hungry Dogs saw a number of hides at the bottom of a stream where the Tanne
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio347_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio347_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -753,7 +753,7 @@ A Dog asleep in a manger filled with hay, was awakened by the Cattle, which came
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio347.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio347.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -774,7 +774,7 @@ A Dog asleep in a manger filled with hay, was awakened by the Cattle, which came
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio366_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio366_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -791,7 +791,7 @@ There was once a Dog who was very fond of eggs. He visited the hen house very of
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio366.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio366.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -812,7 +812,7 @@ There was once a Dog who was very fond of eggs. He visited the hen house very of
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio378_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio378_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -829,7 +829,7 @@ There was once an Ass whose Master also owned a Lap Dog. This Dog was a favorite
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio378.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio378.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -850,7 +850,7 @@ There was once an Ass whose Master also owned a Lap Dog. This Dog was a favorite
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio388_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio388_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -867,7 +867,7 @@ There was once a Dog who was so ill-natured and mischievous that his Master had 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio388.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio388.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -888,7 +888,7 @@ There was once a Dog who was so ill-natured and mischievous that his Master had 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio403_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio403_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -905,7 +905,7 @@ A Dog, to whom the butcher had thrown a bone, was hurrying home with his prize a
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio403.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio403.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
