--- a/docs/source/fables/猫.md
+++ b/docs/source/fables/猫.md
@@ -13,7 +13,7 @@
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio2_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio2_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -30,7 +30,7 @@ There was once a house that was overrun with Mice. A Cat heard of this, and said
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio2.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio2.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -51,7 +51,7 @@ There was once a house that was overrun with Mice. A Cat heard of this, and said
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio12_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio12_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -68,7 +68,7 @@ A Cat heard that the Birds in an aviary were ailing. So he got himself up as a d
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio12.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio12.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -89,7 +89,7 @@ A Cat heard that the Birds in an aviary were ailing. So he got himself up as a d
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio59_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio59_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -106,7 +106,7 @@ The Owl is a very wise bird; and once, long ago, when the first oak sprouted in 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio59.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio59.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -127,7 +127,7 @@ The Owl is a very wise bird; and once, long ago, when the first oak sprouted in 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio114_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio114_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -144,7 +144,7 @@ A Cat pounced on a Cock, and cast about for some good excuse for making a meal o
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio114.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio114.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -165,7 +165,7 @@ A Cat pounced on a Cock, and cast about for some good excuse for making a meal o
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio133_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio133_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -182,7 +182,7 @@ An Eagle built her nest at the top of a high tree; a Cat with her family occupie
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio133.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio133.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -203,7 +203,7 @@ An Eagle built her nest at the top of a high tree; a Cat with her family occupie
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio145_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio145_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -220,7 +220,7 @@ A Cat fell in love with a handsome young man, and begged the goddess Venus to ch
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio145.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio145.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -241,7 +241,7 @@ A Cat fell in love with a handsome young man, and begged the goddess Venus to ch
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio153_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio153_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -259,7 +259,7 @@ Addressing herself to the Grasshopper, she said in her pleasantest manner, "As I
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio153.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio153.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -280,7 +280,7 @@ Addressing herself to the Grasshopper, she said in her pleasantest manner, "As I
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio239_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio239_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -297,7 +297,7 @@ A Man once bought a Parrot and gave it the run of his house. It revelled in its 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio239.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio239.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -320,7 +320,7 @@ A Man once bought a Parrot and gave it the run of his house. It revelled in its 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio284_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio284_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -337,7 +337,7 @@ The Mice once called a meeting to decide on a plan to free themselves of their e
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio284.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio284.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -358,7 +358,7 @@ The Mice once called a meeting to decide on a plan to free themselves of their e
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio339_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio339_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -375,7 +375,7 @@ Once upon a time a Cat and a Monkey lived as pets in the same house. They were g
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio339.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio339.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -396,7 +396,7 @@ Once upon a time a Cat and a Monkey lived as pets in the same house. They were g
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio352_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio352_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -413,7 +413,7 @@ A very young Mouse, who had never seen anything of the world, almost came to gri
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio352.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio352.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -434,7 +434,7 @@ A very young Mouse, who had never seen anything of the world, almost came to gri
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio365_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio365_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -451,7 +451,7 @@ A Cat was growing very thin. As you have guessed, he did not get enough to eat. 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio365.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio365.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -472,7 +472,7 @@ A Cat was growing very thin. As you have guessed, he did not get enough to eat. 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio407_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio407_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -489,7 +489,7 @@ There was once a Cat who was so watchful, that a Mouse hardly dared show the tip
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio407.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio407.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
