--- a/docs/source/fables/猴子.md
+++ b/docs/source/fables/猴子.md
@@ -13,7 +13,7 @@
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio53_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio53_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -30,7 +30,7 @@ At a gathering of all the animals the Monkey danced and delighted them so much t
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio53.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio53.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -51,7 +51,7 @@ At a gathering of all the animals the Monkey danced and delighted them so much t
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio56_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio56_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -68,7 +68,7 @@ Jupiter issued a proclamation to all the beasts, and offered a prize to the one 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio56.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio56.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -89,7 +89,7 @@ Jupiter issued a proclamation to all the beasts, and offered a prize to the one 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio162_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio162_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -106,7 +106,7 @@ At a gathering of all the beasts the Monkey gave an exhibition of dancing and en
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio162.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio162.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -127,7 +127,7 @@ At a gathering of all the beasts the Monkey gave an exhibition of dancing and en
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio226_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio226_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -144,7 +144,7 @@ When people go on a voyage they often take with them lap-dogs or monkeys as pets
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio226.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio226.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -165,7 +165,7 @@ When people go on a voyage they often take with them lap-dogs or monkeys as pets
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio318_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio318_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -182,7 +182,7 @@ At a great celebration in honor of King Lion, the Monkey was asked to dance for 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio318.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio318.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -203,7 +203,7 @@ At a great celebration in honor of King Lion, the Monkey was asked to dance for 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio337_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio337_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -220,7 +220,7 @@ It happened once upon a time that a certain Greek ship bound for Athens was wrec
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio337.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio337.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -241,7 +241,7 @@ It happened once upon a time that a certain Greek ship bound for Athens was wrec
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio415_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio415_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -258,7 +258,7 @@ There was once a baby show among the Animals in the forest. Jupiter provided the
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio415.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio415.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
