--- a/docs/source/fables/老鼠.md
+++ b/docs/source/fables/老鼠.md
@@ -13,7 +13,7 @@
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio5_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio5_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -30,7 +30,7 @@ Once upon a time all the Mice met together in Council, and discussed the best me
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio5.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio5.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -51,7 +51,7 @@ Once upon a time all the Mice met together in Council, and discussed the best me
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio18_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio18_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -68,7 +68,7 @@ A Lion asleep in his lair was waked up by a Mouse running over his face. Losing 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio18.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio18.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -89,7 +89,7 @@ A Lion asleep in his lair was waked up by a Mouse running over his face. Losing 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio137_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio137_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -106,7 +106,7 @@ A Bull gave chase to a Mouse which had bitten him in the nose: but the Mouse was
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio137.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio137.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -127,7 +127,7 @@ A Bull gave chase to a Mouse which had bitten him in the nose: but the Mouse was
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio295_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio295_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -144,7 +144,7 @@ A Lion lay asleep in the forest, his great head resting on his paws. A timid lit
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio295.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio295.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
