--- a/docs/source/fables/青蛙.md
+++ b/docs/source/fables/青蛙.md
@@ -13,7 +13,7 @@
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio20_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio20_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -30,7 +30,7 @@ Some mischievous Boys were playing on the edge of a pond, and, catching sight of
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio20.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio20.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -51,7 +51,7 @@ Some mischievous Boys were playing on the edge of a pond, and, catching sight of
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio24_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio24_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -68,7 +68,7 @@ The Hares once gathered together and lamented the unhappiness of their lot, expo
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio24.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio24.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -89,7 +89,7 @@ The Hares once gathered together and lamented the unhappiness of their lot, expo
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio33_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio33_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -106,7 +106,7 @@ Once upon a time the Sun was about to take to himself a wife. The Frogs in terro
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio33.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio33.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -127,7 +127,7 @@ Once upon a time the Sun was about to take to himself a wife. The Frogs in terro
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio64_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio64_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -144,7 +144,7 @@ Once upon a time a Frog came forth from his home in the marshes and proclaimed t
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio64.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio64.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -165,7 +165,7 @@ Once upon a time a Frog came forth from his home in the marshes and proclaimed t
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio66_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio66_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -182,7 +182,7 @@ A Mouse and a Frog struck up a friendship; they were not well mated, for the Mou
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio66.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio66.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -203,7 +203,7 @@ A Mouse and a Frog struck up a friendship; they were not well mated, for the Mou
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio75_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio75_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -221,7 +221,7 @@ Thinking that a King of that sort was an insult to their dignity, they sent to J
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio75.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio75.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -242,7 +242,7 @@ Thinking that a King of that sort was an insult to their dignity, they sent to J
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio99_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio99_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -259,7 +259,7 @@ Two little Frogs were playing about at the edge of a pool when an Ox came down t
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio99.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio99.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -280,7 +280,7 @@ Two little Frogs were playing about at the edge of a pool when an Ox came down t
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio156_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio156_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -297,7 +297,7 @@ Two Frogs were neighbours. One lived in a marsh, where there was plenty of water
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio156.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio156.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -318,7 +318,7 @@ Two Frogs were neighbours. One lived in a marsh, where there was plenty of water
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio200_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio200_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -335,7 +335,7 @@ Two Frogs lived together in a marsh. But one hot summer the marsh dried up, and 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio200.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio200.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -356,7 +356,7 @@ Two Frogs lived together in a marsh. But one hot summer the marsh dried up, and 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio282_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio282_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -373,7 +373,7 @@ An Ox came down to a reedy pool to drink. As he splashed heavily into the water,
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio282.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio282.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -394,7 +394,7 @@ An Ox came down to a reedy pool to drink. As he splashed heavily into the water,
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio308_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio308_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -411,7 +411,7 @@ Some Boys were playing one day at the edge of a pond in which lived a family of 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio308.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio308.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -432,7 +432,7 @@ Some Boys were playing one day at the edge of a pond in which lived a family of 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio325_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio325_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -449,7 +449,7 @@ Hares, as you know, are very timid, The least shadow, sends them scurrying in fr
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio325.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio325.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -470,7 +470,7 @@ Hares, as you know, are very timid, The least shadow, sends them scurrying in fr
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio359_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio359_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -487,7 +487,7 @@ Two Bulls were fighting furiously in a field, at one side of which was a marsh. 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio359.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio359.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -508,7 +508,7 @@ Two Bulls were fighting furiously in a field, at one side of which was a marsh. 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio370_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio370_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -525,7 +525,7 @@ A young Mouse in search of adventure was running along the bank of a pond where 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio370.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio370.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -546,7 +546,7 @@ A young Mouse in search of adventure was running along the bank of a pond where 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio386_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio386_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -563,7 +563,7 @@ An old Toad once informed all his neighbors that he was a learned doctor. In fac
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio386.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio386.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
