--- a/docs/source/fables/驴.md
+++ b/docs/source/fables/驴.md
@@ -13,7 +13,7 @@
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio44_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio44_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -30,7 +30,7 @@ A Pedlar who owned an Ass one day bought a quantity of salt, and loaded up his b
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio44.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio44.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -51,7 +51,7 @@ A Pedlar who owned an Ass one day bought a quantity of salt, and loaded up his b
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio50_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio50_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -68,7 +68,7 @@ A certain man hired an Ass for a journey in summertime, and started out with the
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio50.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio50.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -89,7 +89,7 @@ A certain man hired an Ass for a journey in summertime, and started out with the
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio60_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio60_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -106,7 +106,7 @@ An Ass found a Lion's Skin, and dressed himself up in it. Then he went about fri
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio60.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio60.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -127,7 +127,7 @@ An Ass found a Lion's Skin, and dressed himself up in it. Then he went about fri
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio98_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio98_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -144,7 +144,7 @@ An old Peasant was sitting in a meadow watching his Ass, which was grazing close
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio98.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio98.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -165,7 +165,7 @@ An old Peasant was sitting in a meadow watching his Ass, which was grazing close
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio105_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio105_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -182,7 +182,7 @@ A Lion and a Wild Ass went out hunting together: the latter was to run down the 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio105.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio105.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -203,7 +203,7 @@ A Lion and a Wild Ass went out hunting together: the latter was to run down the 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio127_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio127_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -220,7 +220,7 @@ A Lion and an Ass set up as partners and went a-hunting together. In course of t
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio127.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio127.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -241,7 +241,7 @@ A Lion and an Ass set up as partners and went a-hunting together. In course of t
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio158_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio158_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -258,7 +258,7 @@ An Ass and a Cock were in a cattle-pen together. Presently a Lion, who had been 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio158.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio158.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -279,7 +279,7 @@ An Ass and a Cock were in a cattle-pen together. Presently a Lion, who had been 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio169_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio169_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -301,7 +301,7 @@ again, convinced that in trying to please all he had pleased none, and had lost 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio169.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio169.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -322,7 +322,7 @@ again, convinced that in trying to please all he had pleased none, and had lost 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio175_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio175_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -339,7 +339,7 @@ A certain man who had an Ass and a Mule loaded them both up one day and set out 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio175.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio175.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -360,7 +360,7 @@ A certain man who had an Ass and a Mule loaded them both up one day and set out 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio179_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio179_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -377,7 +377,7 @@ An Ass was being driven down a mountain road, and after jogging along for a whil
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio179.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio179.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -398,7 +398,7 @@ An Ass was being driven down a mountain road, and after jogging along for a whil
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio187_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio187_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -415,7 +415,7 @@ A Man who wanted to buy an Ass went to market, and, coming across a likely-looki
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio187.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio187.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -436,7 +436,7 @@ A Man who wanted to buy an Ass went to market, and, coming across a likely-looki
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio196_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio196_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -454,7 +454,7 @@ Going up to him, he said, "What a lucky beast you are! Your sleek coat shows how
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio196.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio196.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -475,7 +475,7 @@ Going up to him, he said, "What a lucky beast you are! Your sleek coat shows how
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio197_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio197_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -492,7 +492,7 @@ A Gardener had an Ass which had a very hard time of it, what with scanty food, h
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio197.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio197.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -513,7 +513,7 @@ A Gardener had an Ass which had a very hard time of it, what with scanty food, h
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio198_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio198_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -530,7 +530,7 @@ A Wild Ass saw a Pack-Ass jogging along under a heavy load, and taunted him with
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio198.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio198.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -551,7 +551,7 @@ A Wild Ass saw a Pack-Ass jogging along under a heavy load, and taunted him with
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio205_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio205_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -568,7 +568,7 @@ A certain man put an Image on the back of his Ass to take it to one of the templ
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio205.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio205.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -589,7 +589,7 @@ A certain man put an Image on the back of his Ass to take it to one of the templ
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio224_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio224_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -606,7 +606,7 @@ A Ploughman yoked his Ox and his Ass together, and set to work to plough his fie
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio224.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio224.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -627,7 +627,7 @@ A Ploughman yoked his Ox and his Ass together, and set to work to plough his fie
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio269_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio269_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -644,7 +644,7 @@ A Horse, proud of his fine harness, met an Ass on the high-road. As the Ass with
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio269.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio269.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -665,7 +665,7 @@ A Horse, proud of his fine harness, met an Ass on the high-road. As the Ass with
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio293_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio293_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -682,7 +682,7 @@ An Ass was being driven along a road leading down the mountain side, when he sud
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio293.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio293.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -703,7 +703,7 @@ An Ass was being driven along a road leading down the mountain side, when he sud
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio302_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio302_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -720,7 +720,7 @@ One day as the Lion walked proudly down a forest aisle, and the animals respectf
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio302.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio302.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -741,7 +741,7 @@ One day as the Lion walked proudly down a forest aisle, and the animals respectf
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio314_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio314_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -758,7 +758,7 @@ A Merchant, driving his Ass homeward from the seashore with a heavy load of salt
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio314.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio314.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -779,7 +779,7 @@ A Merchant, driving his Ass homeward from the seashore with a heavy load of salt
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio334_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio334_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -796,7 +796,7 @@ A Lion and an Ass agreed to go hunting together. In their search for game the hu
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio334.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio334.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -817,7 +817,7 @@ A Lion and an Ass agreed to go hunting together. In their search for game the hu
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio349_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio349_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -834,7 +834,7 @@ One day as an Ass was walking in the pasture, he found some Grasshoppers chirpin
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio349.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio349.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -855,7 +855,7 @@ One day as an Ass was walking in the pasture, he found some Grasshoppers chirpin
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio409_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio409_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -872,7 +872,7 @@ A Traveler had hired an Ass to carry him to a distant part of the country. The o
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio409.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio409.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -893,7 +893,7 @@ A Traveler had hired an Ass to carry him to a distant part of the country. The o
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio410_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio410_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -910,7 +910,7 @@ One day, a long time ago, an old Miller and his Son were on their way to market 
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio410.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio410.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
@@ -931,7 +931,7 @@ One day, a long time ago, an old Miller and his Son were on their way to market 
 
 👇 听寓言故事
 
-<audio src='http://quantile.shangfr.site/fables/audio423_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
+<audio src='https://quantile.shangfr.site/fables/audio423_cn.mp3'  style='width: 100%' preload='none' controls>你的浏览器不支持 audio 标签。</audio>
 
 ```
 
@@ -948,7 +948,7 @@ An Ass found a Lion's skin left in the forest by a hunter. He dressed himself in
 
 👇 Listen to this fable
 
-<audio src='http://quantile.shangfr.site/fables/audio423.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
+<audio src='https://quantile.shangfr.site/fables/audio423.mp3'  style='width: 100%' preload='none' controls>Your browser does not support the audio element.</audio>
 
 ```
 
